tests/baselines/reference/interfacedeclWithPredicatesError13.errors.txt
tests/cases/compiler/interfacedeclWithPredicatesError13.ts(2,11): error TS95024: Predicates of interface 'UsersShow' have to be satisfiable


==== tests/cases/compiler/interfacedeclWithPredicatesError13.ts (1 errors) ====
    
    interface UsersShow{
              ~~~~~~~~~
!!! error TS95024: Predicates of interface 'UsersShow' have to be satisfiable
        user_id?: number;
        screen_name?: string;
        text?: string;
    } with {
        present(text);
        or(and(present(user_id), not(present(screen_name))),
           and(present(screen_name), not(present(user_id))));
        present(user_id);
        present(screen_name);
    }